# learn-wgpu

./: Cargo.toml  README.md
src/: camera.rs  camera_controller.rs  event_loop.rs  instance.rs  lib.rs  main.rs  mytexture.rs  shader_triangle.wgsl  shader_triangle_interpol.wgsl  shader_triangle_interpol_buffer.wgsl  state.rs  vertex.rs
src/shaders/: shader_triangle_interpol.wgsl  shader_triangle_interpol_buffer.wgsl  shader_triangle_interpol_buffer_without_text.wgsl
